# ftdi

./: .gitignore  CHANGELOG.md  README.md  default.nix  ftdi.cabal  ftdi.nix  test.hs
.github/workflows/: haskell.yml
System/: FTDI.hs
System/FTDI/: Internal.hs  MPSSE.hs  Properties.hs  Utils.hs
System/FTDI/Utils/: Properties.hs
exe/: Main.hs
