name:          ftdi
version:       1.0.0.0
cabal-version: >=1.8
build-type:    Simple
stability:     experimental
author:        Roel van Dijk <vandijk.roel@gmail.com>, Ben Gamari <ben@smart-cactus.org>, David Cox <standardsemiconductor@gmail.com>
maintainer:    David Cox <standardsemiconductor@gmail.com
copyright:     (c) 2009, 2010 Roel van Dijk, (c) 2018 Ben Gamari, (c) 2021 David Cox
license:       BSD3
license-file:  LICENSE
category:      System
synopsis:      A thin layer over USB to communicate with FTDI chips
description:
  This library enables you to communicate with FTDI devices. It is
  implemented as a lightweight wrapper around the usb library.
tested-with: GHC==8.6.1, GHC==8.4.3, GHC==8.2.2, GHC==8.0.2, GHC==7.10.3

source-repository head
  type:     git
  location: http://github.com/standardsemiconductor/ftdi


-------------------------------------------------------------------------------


library
  exposed-modules: System.FTDI
                 , System.FTDI.MPSSE
  other-modules: System.FTDI.Internal
               , System.FTDI.Utils
  build-depends: async                >= 2.2   && < 2.3
               , base                 >= 4.5   && < 5.0
               , base-unicode-symbols >= 0.1.1 && < 0.3
               , bytestring           >= 0.10  && < 0.12
               , transformers         >= 0.5   && < 0.6
               , usb                  >= 1.3   && < 1.4
               , vector               >= 0.12  && < 0.13

  ghc-options: -Wall

-------------------------------------------------------------------------------

test-suite test
  main-is: test.hs
  type: exitcode-stdio-1.0
  other-modules: System.FTDI
               , System.FTDI.Internal
               , System.FTDI.Properties
               , System.FTDI.Utils
               , System.FTDI.Utils.Properties
  ghc-options: -Wall -fno-warn-orphans

  build-depends: base
               , base-unicode-symbols
               , bytestring
               , QuickCheck                 >= 2.11  && < 2.15
               , generic-random             >= 1.3   && < 1.4
               , random                     >= 1.0.0 && < 1.3
               , tagged                     >= 0.8   && < 0.9
               , test-framework             >= 0.8   && < 0.9
               , test-framework-quickcheck2 >= 0.3   && < 0.4
               , transformers
               , usb
               , vector
